# HYPERCV_PUBLIC

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  ReadMe.txt  test.cpp
arm_build/: CMakeCache.txt  CopyOfCMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
arm_build/modules/: Makefile  cmake_install.cmake
arm_install/include/: Algorithm.h  GeometricTransformation.h  cem.h  draw.h  dwt.h  gradient.h  hypercv_gui.h  morphology.h  normalize.h  point.h  satellite_attitude.h  satellite_orbit.h  shapematch.h  simplemat.h  struct_2D.h  type.h  vector.h
common/: util.hpp
include/: core.h  hypercv.h  imageprocess.h  mathprocess.h  matrixprocess.h  morphology.h  pca.h  point.h  process.h  simplemat.h  sobelprocess.h  spectralprocess.h  struct_2D.h  type.h
modules/: CMakeLists.txt
modules/Algorithm/include/Algorithm/: Algorithm.h  GaussianBlur.h  OtsuThreshold.h  normalize.h
modules/Algorithm/src/: OtsuThreshold.c  normalize.c
modules/algorithm/include/algorithm/: Algorithm.h  HisEqualization.h  cem.h  cluster.h  dft.h  featurepoint.h  hessian.h  pca.h  surf.h
modules/algorithm/src/: EdgeSignalEnergy.c  GaussianBlur.c  HisEqualization.c  HoughLines.c  OtsuThreshold.c  cem.c  cluster.c  dft.c  featurepoint.c  normalize.c  pca.c  precomp.h  shapematch.c  sobelprocess.c  surf.c
modules/algorithm/test/: precomp.h  test_linear_tension.cpp  test_lineartension.cpp  test_otsuthreshold.cpp  test_pca.cpp  test_sobel.cpp  testcem.cpp  testcluster.cpp  testdft.cpp
modules/core/include/: core.h  hypermat.h  simplemat.h  test.h  type.h
modules/core/include/c_include/: core.h  err.h  hypercv.h  hypermat.h  type.h
modules/core/include/core/: 2D_struct.h  core.h  err.h  hypercv.h  hypercvvector.h  hypermat.h  mat2d.h  point.h  savesm.h  simplemat.h  struct_2D.h  test.h  type.h  vector.h
modules/core/include/cxx_include/: core.hpp  hypercv.hpp  hypercv_core.hpp  hypermat.hpp
modules/core/src/: core.cpp  hypermat.c  hypermat.cpp  mat2d.cpp  precomp.h  savesm.c  simplemat.c  simplemat.cpp  struct_2D.c  vector.c
modules/core/src/c_src/: hypermat.c  precomp.h  struct_2D.c
modules/core/src/cxx_src/: hypermat.cpp  precomp.hpp
modules/core/test/: precomp.h  test.cpp  testcore.cpp  testhypermat.cpp  testsimplemat.cpp  testvector.cpp  vim testsimplemat.cpp
modules/gradient/include/gradient/: gradient.h
modules/gradient/src/: canny.c  laplacian.c  precomp.h  sobelprocess.c
modules/gradient/test/: precomp.h
modules/highgui/include/highgui/: color.h  draw.h  hypercv_gui.h  smshow.h
modules/highgui/src/: draw.c  precomp.h  simple_mat_show.c  smshow.c  window_gtk.c
modules/highgui/test/: precomp.h  testdraw.cpp  testsmshow.cpp
modules/process/include/: imageprocess.h  spectralprocess.h
modules/process/include/c_include/: RadiometricCalibration.h  datatypechange.h  filter.h  matrixprocess.h  spectralprocess.h  threshold.h
modules/process/include/process/: GeometricTransformation.h  RadiometricCalibration.h  \  colortransform.h  datatypechange.h  dwt.h  filter.h  gradient.h  imageprocess.h  mathprocess.h  matrixprocess.h  morphology.h  process.h  pyramid.h  spectralprocess.h  threshold.h
modules/process/src/: GaussianBlur.c  GeometricTransformation.c  RadiometricCalibration.c  colortransform.c  datatypechange.c  dwt.c  filter.c  gradient.c  hypercvresize.c  imageprocess.c  imageprocess.cpp  mathprocess.c  mathprocess.cpp  matrixprocess.c  morphology.c  pca.c  precomp.h  pyramid.c  sobelprocess.c  spectralprocess.c  spectralprocess.cpp  threshold.c
modules/process/src/c_src/: RadiometricCalibration.c  colortransform.c  filter.c  gradient.c  hypercvresize.c  imageprocess.c  mathprocess.c  matrixprocess.c  precomp.h  spectralprocess.c  threshold.c
modules/process/src/cxx_src/: imageprocess.cpp  precomp.hpp
modules/process/test/: precomp.h  test_sobel.cpp  test_threshold.cpp  testdatatypechange.cpp  testfilter.cpp  testgeometric.cpp  testgradient.cpp  testhypermatmean.cpp  testimageprocess.cpp  testinvertmatrix.cpp  testmergeimage.cpp  testmorphology.cpp  testpyramid.cpp  testrotate.cpp  testtransport.cpp
modules/satellite/include/satellite/: satellite.h  satellite_attitude.h
modules/satellite/src/: precomp.h  satellite_attitude.c  satellite_orbit.c
modules/satellite/test/: testorbit.cpp
modules/satellite_load/include/: satellite_orbit.h
release/include/: hypercv.h  matrixprocess.h
test_tool/: util.hpp
